Added Allele class, worked on Gene class

--- a/GeneticCrafter/GeneticCrafter.vbproj
+++ b/GeneticCrafter/GeneticCrafter.vbproj
@@ -60,6 +60,7 @@
     <Import Include="System.Diagnostics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Gene.vb" />
     <Compile Include="Genome.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
